--- a/LCTMoodle/Views/BaiVietDienDan/_Item.cshtml
+++ b/LCTMoodle/Views/BaiVietDienDan/_Item.cshtml
@@ -14,7 +14,7 @@
                 </section>
                 <section class="bai-viet">
                     <section class="thoi-gian">
-                        @Model.thoiDiemTao.Value.ToString("dd/M/yyyy HH:mm")
+                        @Model.thoiDiemTao.Value.ToString("H:mm d/M/yyyy")
                     </section>
                 </section>
             </section>            
