--- a/LCTMoodle/Views/BinhLuan/_Item.cshtml
+++ b/LCTMoodle/Views/BinhLuan/_Item.cshtml
@@ -24,7 +24,7 @@
         }
         <section class="thong-tin">
             <span class="thoi-gian">                
-                @Model.thoiDiemTao.Value.ToString("M/yyyy HH:mm")
+                @Model.thoiDiemTao.Value.ToString("H:mm d/M/yyyy")
             </span>
         </section>        
     </section>
