--- a/LCTMoodle/Views/KhoaHoc/Tao.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/Tao.cshtml
@@ -15,7 +15,7 @@
     <section class="tieu-de">
         Tạo khóa học
     </section>
-    <form id="tao_khoa_hoc_form" class="noi-dung lct-form" data-validate-auto>
+    <form id="tao_khoa_hoc_form" class="noi-dung lct-form" data-validate-auto data-cap-nhat>
         <article>
             <ul>
                 <li>
