--- a/LCTMoodle/Views/BaiVietBaiTap/_Khung.cshtml
+++ b/LCTMoodle/Views/BaiVietBaiTap/_Khung.cshtml
@@ -32,9 +32,8 @@
                 <li data-an>
                     <section class="noi-dung">
                         <article class="input">
-                            <input data-chuc-nang="tat-mo" data-mo="thoi-han" name="ThoiDiemHetHan" type="checkbox" data-text="Bài tập có thời hạn" />
-                            <input data-doi-tuong="thoi-han" data-validate="bat-buoc" data-input-type="thoi-gian" name="ThoiDiemHetHan_Gio" placeholder="Chọn thời gian" />
-                            <input data-doi-tuong="thoi-han" data-validate="bat-buoc" data-input-type="lich" name="ThoiDiemHetHan_Ngay" placeholder="Chọn ngày" />
+                            <input data-chuc-nang="tat-mo" data-mo="thoi-han" type="checkbox" data-text="Bài tập có thời hạn" />
+                            <input data-doi-tuong="thoi-han" data-validate="bat-buoc" data-input-type="thoi-gian-lich" name="ThoiDiemHetHan" data-thoi-gian-placeholder="Chọn giờ" data-lich-placeholder="Chọn ngày" />
                         </article>
                     </section>
                 </li>
@@ -53,9 +52,12 @@
         Danh sách bài viết
     </section>
     <ul id="danh_sach_bai_viet" class="noi-dung">
-        @foreach (var baiViet in Model)
+        @if (Model != null)
         {
-            @Html.Partial("~/Views/BaiVietBaiTap/_Item.cshtml", baiViet);
+            foreach (var baiViet in Model)
+            {
+                @Html.Partial("~/Views/BaiVietBaiTap/_Item.cshtml", baiViet);
+            }
         }
     </ul>
 </section>
