--- a/LCTMoodle/Views/KhoaHoc/_Khung.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/_Khung.cshtml
@@ -1,13 +1,8 @@
 ﻿@model DTOLayer.KhoaHocDTO
 @{
-    Data.KetQua ketQua = DAOLayer.BaiVietBaiGiangDAO.layTheoMaKhoaHoc(Model.ma);
-    var danhSachBaiGiang = ketQua.trangThai == 0 ? ketQua.ketQua as List<DTOLayer.BaiVietBaiGiangDTO> : null;
-
-    ketQua = DAOLayer.BaiVietBaiTapDAO.layTheoMaKhoaHoc(Model.ma);
-    var danhSachBaiTap = ketQua.trangThai == 0 ? ketQua.ketQua as List<DTOLayer.BaiVietBaiTapDTO> : null;
-
-    ketQua = DAOLayer.BaiVietDienDanDAO.layTheoMaKhoaHoc(Model.ma);
-    var danhSachDienDan = ketQua.trangThai == 0 ? ketQua.ketQua as List<DTOLayer.BaiVietDienDanDTO> : null;
+    var danhSachBaiGiang = ViewData["BaiGiang"] as List<DTOLayer.BaiVietBaiGiangDTO>;
+    var danhSachBaiTap = ViewData["BaiTap"] as List<DTOLayer.BaiVietBaiTapDTO>;
+    var danhSachDienDan = ViewData["DienDan"] as List<DTOLayer.BaiVietDienDanDTO>;
 }
 
 <article class="hop">
