--- a/LCTMoodle/Views/HoiDap/_itemTraLoi.cshtml
+++ b/LCTMoodle/Views/HoiDap/_itemTraLoi.cshtml
@@ -28,7 +28,7 @@
 
 @if (Model != null)
 {
-    for(int i = (Model.Count - 1); i >= 0; i--)
+    for(int i = 0; i < Model.Count; i++)
     {
         <article class="hop hop-1-vien">
             <section class="noi-dung tra-loi">
