--- a/LCTMoodle/Views/KhoaHoc/Tao.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/Tao.cshtml
@@ -50,7 +50,7 @@
                     </section>
                     <section class="noi-dung">
                         <article class="input">
-                            <input data-validate="bat-buoc" data-input-type="chu-de" name="ChuDe" data-pham-vi="KhoaHoc" placeholder="Khóa học của bạn thuộc chủ đề nào?" />
+                            <input data-validate="bat-buoc" data-input-type="chu-de" name="ChuDe" placeholder="Khóa học của bạn thuộc chủ đề nào?" />
                         </article>
                     </section>
                 </li>
