--- a/LCTMoodle/Views/ChuDe/QuanLy.cshtml
+++ b/LCTMoodle/Views/ChuDe/QuanLy.cshtml
@@ -1,8 +1,7 @@
-﻿@{
+﻿@model List<DTOLayer.ChuDeDTO>
+@{
     ViewData["TieuDe"] = "Quản lý chủ đề";
     Layout = "~/Views/LCT/Khung.cshtml";
-
-    var danhSachPhamVi = Data.PhamVi.layDanhSach();
 }
 @section Styles {
 }
@@ -19,16 +18,18 @@
     <section class="tieu-de">
         Quản lý chủ đề
     </section>
-    <section id="khung_quan_ly" class="noi-dung lct-cay" data-ma data-pham-vi>
+    <section id="khung_quan_ly" class="noi-dung lct-cay" data-ma="0">
         <section class="cay">
             <ul id="khung_cay" class="nut">
-                @Html.Partial("~/Views/ChuDe/Khung/_Cay_HeThong_Item.cshtml", Data.PhamVi.layDanhSach())
+                @Html.Partial("~/Views/ChuDe/_Cay_Item.cshtml", Model, new ViewDataDictionary()
+                {
+                    { "Ma", 0 },
+                    { "Ten", "Danh sách" }
+                })
             </ul>
         </section>
         <section class="con">
-            <ul id="khung_danh_sach" class="khung-danh-sach">
-                @Html.Partial("~/Views/ChuDe/Khung/_DanhSach_PhamVi.cshtml", Data.PhamVi.layDanhSach())
-            </ul>
+            <ul id="khung_danh_sach" class="khung-danh-sach">@Html.Partial("~/Views/ChuDe/_DanhSach.cshtml", Model)</ul>   
             <a href="javascript:void(0)" data-chuc-nang="tao">
                 <i class="pe-7s-plus"></i>
                 Hiện chưa có nút con, hãy tạo một nút con mới
