--- a/LCTMoodle/Views/ChuDe/_Chon.cshtml
+++ b/LCTMoodle/Views/ChuDe/_Chon.cshtml
@@ -1,68 +1,37 @@
-﻿@model DTOLayer.ChuDeDTO
+﻿@model List<DTOLayer.ChuDeDTO>
 
 <article class="hop">
     <section class="tieu-de">
         Chọn chủ đề
     </section>
-    <section id="khung_quan_ly" class="noi-dung lct-cay" data-ma="@(Model != null ? Model.ma : 0)" data-pham-vi="@ViewData["PhamVi"]">
+    <section id="khung_quan_ly" class="noi-dung lct-cay" data-ma="0">
         <section class="cay">
             <ul id="khung_cay" class="nut">
-                @helper hienThiCay(DTOLayer.ChuDeDTO chuDe)
+                @Html.Partial("~/Views/ChuDe/_Cay_Item.cshtml", Model, new ViewDataDictionary()
                 {
-                    if (chuDe == null)
-                    {
-                        Data.PhamVi phamVi = Data.PhamVi.lay(ViewData["PhamVi"].ToString());
-
-                        var ketQua = DAOLayer.ChuDeDAO.layTheoMaChuDeCha(phamVi.ma, 0);
-                        var danhSachChuDeCon = ketQua.trangThai == 0 ? ketQua.ketQua : null; 
-                        
-                        @Html.Partial("~/Views/ChuDe/Khung/_Cay_PhamVi_Item.cshtml", danhSachChuDeCon, new ViewDataDictionary()
-                        {
-                            { "Ma", phamVi.ma },
-                            { "Ten", phamVi.ten }
-                        })
-                    }
-                    else
-                    {
-                        @hienThiCay(chuDe.chuDeCha);
-                    
-                        @Html.Partial("~/Views/ChuDe/Khung/_Cay_Item.cshtml", chuDe.danhSachChuDeCon, new ViewDataDictionary()
-                        {
-                            { "Ma", chuDe.ma },
-                            { "Ten", chuDe.ten }
-                        })
-                    }
-                }
-                @hienThiCay(Model)
+                    { "Ma", 0 },
+                    { "Ten", "Danh sách" }
+                })
             </ul>
         </section>
         <section class="con">
-            <ul id="khung_danh_sach" class="khung-danh-sach">
-                @if(Model == null)
-                {
-                    Data.PhamVi phamVi = Data.PhamVi.lay(ViewData["PhamVi"].ToString());
-
-                    var ketQua = DAOLayer.ChuDeDAO.layTheoMaChuDeCha(phamVi.ma, 0);
-                    List<DTOLayer.ChuDeDTO> danhSachChuDeCon = ketQua.trangThai == 0 ? ketQua.ketQua as List<DTOLayer.ChuDeDTO> : new List<DTOLayer.ChuDeDTO>();
-
-                    foreach (DTOLayer.ChuDeDTO chuDe in danhSachChuDeCon)
-                    {
-                        @Html.Partial("~/Views/ChuDe/Khung/_DanhSach_Item.cshtml", chuDe)
-                    }   
-                }
-                else
-                {
-                    foreach (DTOLayer.ChuDeDTO chuDe in Model.danhSachChuDeCon)
-                    {
-                        @Html.Partial("~/Views/ChuDe/Khung/_DanhSach_Item.cshtml", chuDe)
-                    }        
-                }
-                
-            </ul>
+            <ul id="khung_danh_sach" class="khung-danh-sach">@Html.Partial("~/Views/ChuDe/_DanhSach.cshtml", Model)</ul>
             <a href="javascript:void(0)" data-chuc-nang="tao">
                 <i class="pe-7s-plus"></i>
                 Hiện chưa có nút con, hãy tạo một nút con mới
             </a>
+        </section>
+        <section class="khung-chuc-nang">
+            <ul>
+                <li>
+                    <a class="pe-7s-tools"></a>
+                </li>
+                <li>
+                    <a data-chuc-nang="tao" class="pe-7s-plus">
+                        <u></u>
+                    </a>
+                </li>
+            </ul>
         </section>
     </section>
 </article>
