--- a/LCTMoodle/Views/BangDiem/Tao.cshtml
+++ b/LCTMoodle/Views/BangDiem/Tao.cshtml
@@ -74,7 +74,7 @@
                         </section>
                         <section class="td">
                             <article class="input">
-                                <input data-input-type="lich" name="Ngay" placeholder="Ngày" style="text-align: center" />
+                                <input data-input-type="ngay" name="Ngay" placeholder="Ngày" style="text-align: center" />
                             </article>
                             <section class="khung-button">
                                 <button type="submit" class="chap-nhan">
