--- a/LCTMoodle/Views/KhoaHoc/Tao.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/Tao.cshtml
@@ -98,7 +98,7 @@
                     </section>
                     <section class="noi-dung">
                         <article class="input">
-                            <input data-validate="bat-buoc" data-input-type="thoi-gian-lich" name="ThoiDiemHetHan" data-thoi-gian-placeholder="Giờ" data-lich-placeholder="Ngày" />
+                            <input data-validate="bat-buoc" data-input-type="ngay-gio" name="ThoiDiemHetHan" data-thoi-gian-placeholder="Giờ" data-lich-placeholder="Ngày" />
                         </article>
                     </section>
                 </li>
@@ -123,7 +123,7 @@
                     </section>
                     <section class="noi-dung">
                         <article class="input">
-                            <input data-validate="bat-buoc" data-input-type="thoi-gian-lich" name="HanDangKy" data-thoi-gian-placeholder="Giờ" data-lich-placeholder="Ngày" />
+                            <input data-validate="bat-buoc" data-input-type="ngay-gio" name="HanDangKy" data-thoi-gian-placeholder="Giờ" data-lich-placeholder="Ngày" />
                         </article>
                     </section>
                 </li>
