--- a/LCTMoodle/Views/TrangChu/FormMau.cshtml
+++ b/LCTMoodle/Views/TrangChu/FormMau.cshtml
@@ -30,7 +30,7 @@
                     </section>
                     <section class="noi-dung">
                         <article class="input">
-                            <input data-input-type="thoi-gian-lich" name="name" value="" data-thoi-gian-mac-dinh="00:00" data-lich-mac-dinh="20/12/2014" data-thoi-gian-placeholder="Chọn thời gian" data-lich-placeholder="Chọn ngày" />
+                            <input data-input-type="ngay-gio" name="name" value="" data-thoi-gian-mac-dinh="00:00" data-lich-mac-dinh="20/12/2014" data-thoi-gian-placeholder="Chọn thời gian" data-lich-placeholder="Chọn ngày" />
                         </article>
                     </section>
                 </li>
@@ -208,8 +208,8 @@
                     </section>
                     <section class="noi-dung">
                         <article class="input">
-                            <input data-input-type="thoi-gian" name="name" value="" data-mac-dinh="00:00" placeholder="Chọn thời gian" />
-                            <input data-input-type="lich" name="name" value="" data-mac-dinh="23.12.1234" placeholder="Chọn ngày" />
+                            <input data-input-type="gio" name="name" value="" data-mac-dinh="00:00" placeholder="Chọn thời gian" />
+                            <input data-input-type="ngay" name="name" value="" data-mac-dinh="23.12.1234" placeholder="Chọn ngày" />
                         </article>
                     </section>
                 </li>
@@ -221,7 +221,7 @@
                     </section>
                     <section class="noi-dung">
                         <article class="input">
-                            <input data-input-type="thoi-gian" name="name" value="" data-mac-dinh="00:00" placeholder="Chọn thời gian" />
+                            <input data-input-type="gio" name="name" value="" data-mac-dinh="00:00" placeholder="Chọn thời gian" />
                         </article>
                     </section>
                 </li>
@@ -233,7 +233,7 @@
                     </section>
                     <section class="noi-dung">
                         <article class="input">
-                            <input data-input-type="lich" name="name" value="" data-mac-dinh="23.12.1234" placeholder="Chọn ngày" />
+                            <input data-input-type="ngay" name="name" value="" data-mac-dinh="23.12.1234" placeholder="Chọn ngày" />
                         </article>
                     </section>
                 </li>
