--- a/LCTMoodle/Views/NguoiDung/DangKy.cshtml
+++ b/LCTMoodle/Views/NguoiDung/DangKy.cshtml
@@ -74,7 +74,7 @@
                         </section>
                         <section class="noi-dung">
                             <article class="input">
-                                <input data-input-type="lich" name="NgaySinh" value="" data-validate="bat-buoc" />
+                                <input data-input-type="ngay" name="NgaySinh" value="" data-validate="bat-buoc" />
                             </article>
                         </section>
                     </li>
